--- a/pom.xml
+++ b/pom.xml
@@ -42,10 +42,10 @@
 
 	<build>
 		<plugins>
-			<plugin> <!-- updated on 29/07/2015 -->
+			<plugin> <!-- updated on 04/04/2021 -->
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-source-plugin</artifactId>
-				<version>2.4</version>
+				<version>3.2.1</version>
 				<executions>
 					<execution>
 						<id>bind-sources</id>
@@ -56,46 +56,38 @@
 				</executions>
 			</plugin>
 
-			<plugin> <!-- updated on 29/10/2015 -->
+			<plugin> <!-- updated on 04/04/2021 -->
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.3</version>
+				<version>3.8.1</version>
 				<configuration>
 					<encoding>UTF-8</encoding>
 					<source>${maven.compiler.source}</source>
 					<target>${maven.compiler.target}</target>
-					<excludes>
-						<exclude>**/.svn/*</exclude>
-						<exclude>**/.svn</exclude>
-					</excludes>
 				</configuration>
 			</plugin>
 
-			<plugin> <!-- updated on 29/10/2015 -->
+			<plugin> <!-- updated on 04/04/2021 -->
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-resources-plugin</artifactId>
-				<version>2.7</version>
+				<version>3.2.0</version>
 				<configuration>
 					<encoding>UTF-8</encoding>
 				</configuration>
 			</plugin>
 
-			<plugin> <!-- updated on 29/10/2015 -->
+			<plugin> <!-- updated on 04/04/2021 -->
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jar-plugin</artifactId>
-				<version>2.6</version>
+				<version>3.2.0</version>
 				<configuration>
-					<excludes>
-						<exclude>**/.svn/*</exclude>
-						<exclude>**/.svn</exclude>
-					</excludes>
 				</configuration>
 			</plugin>
 
-			<plugin> <!-- updated on 29/07/2015 -->
+			<plugin> <!-- updated on 04/04/2021 -->
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>
-				<version>2.10.4</version>
+				<version>3.2.0</version>
 				<!-- ONLY NEEDED With jdk 1.7+ -->
 				<configuration>
 					<failOnError>false</failOnError>
@@ -114,7 +106,6 @@
 	</build>
 
 	<scm>
-		<!-- ON GIT HUB -->
 		<connection>scm:git:https://github.com/netplex/json-smart-v2.git</connection>
 		<developerConnection>scm:git:https://github.com/netplex/json-smart-v2.git</developerConnection>
 		<url>https://github.com/netplex/json-smart-v2</url>
@@ -122,10 +113,10 @@
 
 	<reporting>
 		<plugins>
-			<plugin> <!-- updated on 29/10/2015 -->
+			<plugin> <!-- updated on 04/04/2021 -->
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-checkstyle-plugin</artifactId>
-				<version>2.17</version>
+				<version>3.1.2</version>
 				<configuration>
 					<configLocation>google_checks.xml</configLocation>
 				</configuration>
@@ -148,8 +139,6 @@
 			<id>ossrh</id>
 			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
 		</repository>
-		<!-- <snapshotRepository> <id>ossrh</id> <url>https://oss.sonatype.org/content/repositories/snapshots</url> 
-			</snapshotRepository> -->
 	</distributionManagement>
 	<!-- release with: mvn clean deploy -P release-sign-artifacts-->
 	<profiles>
@@ -216,10 +205,10 @@
 						tag, deploy) to try: mvn release:prepare -DdryRun=true && mvn release:clean 
 						to perform: mvn release:prepare release:perform Read http://nexus.sonatype.org/oss-repository-hosting.html#3 
 						for instructions on releasing to this project's Sonatype repository -->
-					<plugin>
+					<plugin> <!-- updated on 04/04/2021 -->
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-release-plugin</artifactId>
-						<version>2.5.3</version>
+						<version>3.0.0-M1</version>
 						<configuration>
 							<mavenExecutorId>forked-path</mavenExecutorId>
 							<arguments>-Psonatype-oss-release</arguments>
