--- a/accessors-smart/pom.xml
+++ b/accessors-smart/pom.xml
@@ -1,9 +1,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <!-- this POM is released under an Apache 2.0 license -->
     <modelVersion>4.0.0</modelVersion>
     <groupId>net.minidev</groupId>
     <artifactId>accessors-smart</artifactId>
-    <version>2.4.3</version>
+    <version>2.5.0</version>
     <name>ASM based accessors helper used by json-smart</name>
     <description>Java reflect give poor performance on getter setter an constructor calls, accessors-smart use ASM to speed up those calls.
     </description>
@@ -19,9 +18,12 @@
             <name>Uriel Chemouni</name>
             <email>uchemouni@gmail.com</email>
             <timezone>GMT+3</timezone>
-            <roles>
-            </roles>
         </developer>
+
+
+
+
+
     </developers>
     <licenses>
         <license>
@@ -36,38 +38,8 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
-    <dependencies>
-	<!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
-		<dependency>
-    		<groupId>org.junit.jupiter</groupId>
-    		<artifactId>junit-jupiter-api</artifactId>
-    		<version>5.7.1</version>
-    		<scope>test</scope>
-		</dependency>
-        <dependency>
-            <groupId>org.ow2.asm</groupId>
-            <artifactId>asm</artifactId>
-            <version>8.0.1</version>
-        </dependency>
-    </dependencies>
 
-    <!-- updated on 29/10/2015 -->
-    <!--
-    <reporting>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-checkstyle-plugin</artifactId>
-                <version>2.17</version>
-                <configuration>
-                    <configLocation>google_checks.xml</configLocation>
-                </configuration>
-            </plugin>
-        </plugins>
-    </reporting>
-     -->
     <scm>
-        <!-- ON GIT HUB -->
         <connection>scm:git:https://github.com/netplex/json-smart-v2.git</connection>
         <developerConnection>scm:git:https://github.com/netplex/json-smart-v2.git</developerConnection>
         <url>https://github.com/netplex/json-smart-v2</url>
@@ -82,6 +54,7 @@
             <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
         </repository>
     </distributionManagement>
+	<!-- release with: mvn clean deploy -P release-sign-artifacts-->
     <profiles>
         <profile>
             <id>release-sign-artifacts</id>
@@ -93,27 +66,12 @@
                 </property>
             </activation>
             <properties>
-				<!-- My old Is back -->
-				<!-- <gpg.keyname>2C8DF6EC</gpg.keyname> -->
 				<!-- 2021 rsa4096 key-->
 				<gpg.keyname>53BE126D</gpg.keyname>
-                <!-- <gpg.keyname>8E322ED0</gpg.keyname> -->
                 <!-- <gpg.keyname>Uriel Chemouni (dev) <uchemouni@gmail.com></gpg.keyname> -->
-                <!-- GPG Key ID to use for signing -->
             </properties>
             <build>
                 <plugins>
-                    <!-- Enable signing of the artifacts For gpg:sign-and-deploy-file it's 
-						necessary to have a <server> with the repositoryId provided or id="remote-repository" 
-						defined in settings.xml (it contains the repository's login, psw) Signing: 
-						mvn gpg:sign-and-deploy-file -DpomFile=target/myapp-1.0.pom -Dfile=target/myapp-1.0.jar 
-						-Durl=http://oss.sonatype.org/content/repositories/malyvelky/ -DrepositoryId=sonatype_oss 
-						Note normally it uses the defaul key but we can ovveride it by either setting 
-						the property gpg.keyname (done in this POM) or by providing -Dkeyname=66AE163A 
-						on the command line. OR directly w/ gpg (remove space in - -): gpg -u 66AE163A 
-						- -sign - -detach-sign -a target/dbunit-embeddedderby-parenttest.jar Note: 
-						"mvn gpg:sign" results in NPE with v 1.o-a.-4, use "mvn package gpg:sign" 
-						instead; see the issue MGPG-18 -->
                     <plugin>
                         <!-- updated on 29/07/2015 -->
                         <groupId>org.apache.maven.plugins</groupId>
@@ -133,6 +91,10 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-javadoc-plugin</artifactId>
+						<version>3.2.0</version>
+						<configuration>
+                          <source>8</source>
+                		</configuration>
                         <executions>
                             <execution>
                                 <id>attach-javadocs</id>
@@ -146,10 +108,10 @@
 						tag, deploy) to try: mvn release:prepare -DdryRun=true && mvn release:clean 
 						to perform: mvn release:prepare release:perform Read http://nexus.sonatype.org/oss-repository-hosting.html#3 
 						for instructions on releasing to this project's Sonatype repository -->
-                    <plugin>
+                    <plugin> <!-- updated on 04/04/2021 -->
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-release-plugin</artifactId>
-                        <version>2.5.3</version>
+                        <version>3.0.0-M1</version>
                         <configuration>
                             <mavenExecutorId>forked-path</mavenExecutorId>
                             <arguments>-Psonatype-oss-release</arguments>
@@ -181,10 +143,9 @@
     <build>
         <plugins>
             <plugin>
-                <!-- updated on 29/07/2015 -->
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-source-plugin</artifactId>
-                <version>2.4</version>
+                <version>3.2.1</version>
                 <executions>
                     <execution>
                         <id>bind-sources</id>
@@ -195,48 +156,35 @@
                 </executions>
             </plugin>
             <plugin>
-                <!-- updated on 29/10/2015 -->
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.3</version>
+                <version>3.8.1</version>
                 <configuration>
                     <encoding>UTF-8</encoding>
                     <source>${maven.compiler.source}</source>
                     <target>${maven.compiler.target}</target>
-                    <excludes>
-                        <exclude>**/.svn/*</exclude>
-                        <exclude>**/.svn</exclude>
-                    </excludes>
                 </configuration>
             </plugin>
             <plugin>
-                <!-- updated on 29/10/2015 -->
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-resources-plugin</artifactId>
-                <version>2.7</version>
+                <version>3.2.0</version>
                 <configuration>
                     <encoding>UTF-8</encoding>
                 </configuration>
             </plugin>
             <plugin>
-                <!-- updated on 29/10/2015 -->
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
-                <version>2.6</version>
-                <configuration>
-                    <excludes>
-                        <exclude>**/.svn/*</exclude>
-                        <exclude>**/.svn</exclude>
-                    </excludes>
-                </configuration>
+                <version>3.2.0</version>
             </plugin>
             <plugin>
-                <!-- updated on 29/07/2015 -->
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
-                <version>2.10.4</version>
+                <version>3.2.0</version>
                 <!-- ONLY NEEDED With jdk 1.7+ -->
                 <configuration>
+                    <source>8</source>
                     <failOnError>false</failOnError>
                     <!-- <additionalparam>-Xdoclint:none</additionalparam> -->
                 </configuration>
@@ -270,4 +218,18 @@
             </plugin>
         </plugins>
     </build>
+    <dependencies>
+        <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
+            <dependency>
+                <groupId>org.junit.jupiter</groupId>
+                <artifactId>junit-jupiter-api</artifactId>
+                <version>5.7.1</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.ow2.asm</groupId>
+                <artifactId>asm</artifactId>
+                <version>9.1</version>
+            </dependency>
+        </dependencies>    
 </project>
