--- a/json-smart-action/pom.xml
+++ b/json-smart-action/pom.xml
@@ -1,16 +1,10 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <!-- this POM is released under an Apache 2.0 license -->
-	<parent>
-		<groupId>net.minidev</groupId>
-		<artifactId>minidev-parent</artifactId>
-		<version>2.4.4</version>
-	</parent>
     <modelVersion>4.0.0</modelVersion>
+    <groupId>net.minidev</groupId>
+    <version>2.5.0</version>
     <artifactId>json-smart-action</artifactId>
     <name>JSON-smart-action Small and Fast Parser</name>
-    <description>
-        JSON (JavaScript Object Notation) is a lightweight data-interchange format. It is easy for humans to read and write. It is easy for machines to parse and generate. It is based on a subset of the JavaScript Programming Language, Standard ECMA-262 3rd Edition - December 1999. JSON is a text format that is completely language independent but uses conventions that are familiar to programmers of the C-family of languages, including C, C++, C#, Java, JavaScript, Perl, Python, and many others. These properties make JSON an ideal data-interchange language.
-    </description>
+    <description>JSON (JavaScript Object Notation) is a lightweight data-interchange format. It is easy for humans to read and write. It is easy for machines to parse and generate. It is based on a subset of the JavaScript Programming Language, Standard ECMA-262 3rd Edition - December 1999. JSON is a text format that is completely language independent but uses conventions that are familiar to programmers of the C-family of languages, including C, C++, C#, Java, JavaScript, Perl, Python, and many others. These properties make JSON an ideal data-interchange language.</description>
     <packaging>bundle</packaging>
     <url>https://urielch.github.io/</url>
     <organization>
@@ -23,8 +17,6 @@
             <name>Uriel Chemouni</name>
             <email>uchemouni@gmail.com</email>
             <timezone>GMT+3</timezone>
-            <roles>
-            </roles>
         </developer>
         <developer>
             <id>erav</id>
@@ -46,24 +38,8 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
-    <dependencies>
-		<dependency>
-    		<groupId>org.junit.jupiter</groupId>
-    		<artifactId>junit-jupiter-api</artifactId>
-    		<scope>test</scope>
-		</dependency>
-		<dependency>
-    		<groupId>org.junit.jupiter</groupId>
-    		<artifactId>junit-jupiter-params</artifactId>
-    		<scope>test</scope>
-		</dependency>
-        <dependency>
-            <groupId>net.minidev</groupId>
-            <artifactId>json-smart</artifactId>
-        </dependency>
-    </dependencies>
+
     <scm>
-        <!-- ON GIT HUB -->
         <connection>scm:git:https://github.com/netplex/json-smart-v2.git</connection>
         <developerConnection>scm:git:https://github.com/netplex/json-smart-v2.git</developerConnection>
         <url>https://github.com/netplex/json-smart-v2</url>
@@ -78,6 +54,7 @@
             <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
         </repository>
     </distributionManagement>
+	<!-- release with: mvn clean deploy -P release-sign-artifacts-->
     <profiles>
         <profile>
             <id>release-sign-artifacts</id>
@@ -89,27 +66,12 @@
                 </property>
             </activation>
             <properties>
-            	<!-- My old Is back -->
-				<!-- <gpg.keyname>2C8DF6EC</gpg.keyname> -->
 				<!-- 2021 rsa4096 key-->
 				<gpg.keyname>53BE126D</gpg.keyname>
-                <!-- <gpg.keyname>8E322ED0</gpg.keyname> -->
                 <!-- <gpg.keyname>Uriel Chemouni (dev) <uchemouni@gmail.com></gpg.keyname> -->
-                <!-- GPG Key ID to use for signing -->
             </properties>
             <build>
                 <plugins>
-                    <!-- Enable signing of the artifacts For gpg:sign-and-deploy-file it's 
-						necessary to have a <server> with the repositoryId provided or id="remote-repository" 
-						defined in settings.xml (it contains the repository's login, psw) Signing: 
-						mvn gpg:sign-and-deploy-file -DpomFile=target/myapp-1.0.pom -Dfile=target/myapp-1.0.jar 
-						-Durl=http://oss.sonatype.org/content/repositories/malyvelky/ -DrepositoryId=sonatype_oss 
-						Note normally it uses the defaul key but we can ovveride it by either setting 
-						the property gpg.keyname (done in this POM) or by providing -Dkeyname=66AE163A 
-						on the command line. OR directly w/ gpg (remove space in - -): gpg -u 66AE163A 
-						- -sign - -detach-sign -a target/dbunit-embeddedderby-parenttest.jar Note: 
-						"mvn gpg:sign" results in NPE with v 1.o-a.-4, use "mvn package gpg:sign" 
-						instead; see the issue MGPG-18 -->
                     <plugin>
                         <!-- updated on 29/07/2015 -->
                         <groupId>org.apache.maven.plugins</groupId>
@@ -142,10 +104,10 @@
 						tag, deploy) to try: mvn release:prepare -DdryRun=true && mvn release:clean 
 						to perform: mvn release:prepare release:perform Read http://nexus.sonatype.org/oss-repository-hosting.html#3 
 						for instructions on releasing to this project's Sonatype repository -->
-                    <plugin>
+                    <plugin> <!-- updated on 04/04/2021 -->
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-release-plugin</artifactId>
-                        <version>2.5.2</version>
+                        <version>3.0.0-M1</version>
                         <configuration>
                             <mavenExecutorId>forked-path</mavenExecutorId>
                             <arguments>-Psonatype-oss-release</arguments>
@@ -176,11 +138,10 @@
     </profiles>
     <build>
         <plugins>
-            <plugin>
-                <!-- updated on 29/07/2015 -->
+			<plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-source-plugin</artifactId>
-                <version>2.4</version>
+                <version>3.2.1</version>
                 <executions>
                     <execution>
                         <id>bind-sources</id>
@@ -191,46 +152,32 @@
                 </executions>
             </plugin>
             <plugin>
-                <!-- updated on 29/10/2015 -->
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.3</version>
+                <version>3.8.1</version>
                 <configuration>
                     <encoding>UTF-8</encoding>
                     <source>${maven.compiler.source}</source>
                     <target>${maven.compiler.target}</target>
-                    <excludes>
-                        <exclude>**/.svn/*</exclude>
-                        <exclude>**/.svn</exclude>
-                    </excludes>
                 </configuration>
             </plugin>
             <plugin>
-                <!-- updated on 29/10/2015 -->
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-resources-plugin</artifactId>
-                <version>2.7</version>
+                <version>3.2.0</version>
                 <configuration>
                     <encoding>UTF-8</encoding>
                 </configuration>
             </plugin>
             <plugin>
-                <!-- updated on 29/10/2015 -->
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
-                <version>2.6</version>
-                <configuration>
-                    <excludes>
-                        <exclude>**/.svn/*</exclude>
-                        <exclude>**/.svn</exclude>
-                    </excludes>
-                </configuration>
+                <version>3.2.0</version>
             </plugin>
-            <plugin>
-                <!-- updated on 29/07/2015 -->
+            <plugin> <!-- updated on 04/04/2021 -->
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
-                <version>2.10.4</version>
+				<version>3.2.0</version>
                 <!-- ONLY NEEDED With jdk 1.7+ -->
                 <configuration>
                     <failOnError>false</failOnError>
@@ -248,7 +195,7 @@
             <plugin>
                 <groupId>org.apache.felix</groupId>
                 <artifactId>maven-bundle-plugin</artifactId>
-                <version>3.5.1</version>
+                <version>5.1.2</version>
                 <extensions>true</extensions>
                 <configuration>
                     <instructions>
@@ -263,4 +210,23 @@
             </plugin>
         </plugins>
     </build>
+    <dependencies>
+		<dependency>
+    		<groupId>org.junit.jupiter</groupId>
+    		<artifactId>junit-jupiter-api</artifactId>
+            <version>5.7.1</version>
+    		<scope>test</scope>
+		</dependency>
+		<dependency>
+    		<groupId>org.junit.jupiter</groupId>
+    		<artifactId>junit-jupiter-params</artifactId>
+            <version>5.7.1</version>
+    		<scope>test</scope>
+		</dependency>
+        <dependency>
+            <groupId>net.minidev</groupId>
+            <artifactId>json-smart</artifactId>
+            <version>2.5.0</version>
+        </dependency>
+    </dependencies>
 </project>
