--- a/json-smart/pom.xml
+++ b/json-smart/pom.xml
@@ -13,17 +13,17 @@
         JSON (JavaScript Object Notation) is a lightweight data-interchange format. It is easy for humans to read and write. It is easy for machines to parse and generate. It is based on a subset of the JavaScript Programming Language, Standard ECMA-262 3rd Edition - December 1999. JSON is a text format that is completely language independent but uses conventions that are familiar to programmers of the C-family of languages, including C, C++, C#, Java, JavaScript, Perl, Python, and many others. These properties make JSON an ideal data-interchange language.
     </description>
 	<packaging>bundle</packaging>
-	<url>http://www.minidev.net/</url>
+	<url>https://urielch.github.io/</url>
 	<organization>
 		<name>Chemouni Uriel</name>
-		<url>http://www.minidev.net/</url>
+		<url>https://urielch.github.io/</url>
 	</organization>
 	<developers>
 		<developer>
 			<id>uriel</id>
 			<name>Uriel Chemouni</name>
 			<email>uchemouni@gmail.com</email>
-			<timezone>GMT-7</timezone>
+			<timezone>GMT+3</timezone>
 			<roles>
 			</roles>
 		</developer>
@@ -44,8 +44,8 @@
 	</licenses>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<maven.compiler.source>1.5</maven.compiler.source>
-		<maven.compiler.target>1.5</maven.compiler.target>
+		<maven.compiler.source>1.8</maven.compiler.source>
+		<maven.compiler.target>1.8</maven.compiler.target>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -87,7 +87,9 @@
 			</activation>
 			<properties>
 				<!-- My old Is back -->
-				<gpg.keyname>2C8DF6EC</gpg.keyname>
+				<!-- <gpg.keyname>2C8DF6EC</gpg.keyname> -->
+				<!-- 2021 rsa4096 key-->
+				<gpg.keyname>53BE126D</gpg.keyname>
 				<!-- <gpg.keyname>8E322ED0</gpg.keyname> -->
 				<!-- <gpg.keyname>Uriel Chemouni (dev) <uchemouni@gmail.com></gpg.keyname> -->
 				<!-- GPG Key ID to use for signing -->
@@ -122,8 +124,10 @@
 					</plugin>
 					<!-- Publish also javadocs when releasing - required by Sonatype -->
 					<plugin>
+						<!-- updated on 17/04/2021 -->
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-javadoc-plugin</artifactId>
+						<version>3.2.0</version>
 						<executions>
 							<execution>
 								<id>attach-javadocs</id>
@@ -140,7 +144,7 @@
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-release-plugin</artifactId>
-						<version>2.5.2</version>
+						<version>2.5.3</version>
 						<configuration>
 							<mavenExecutorId>forked-path</mavenExecutorId>
 							<arguments>-Psonatype-oss-release</arguments>
@@ -172,10 +176,10 @@
 	<build>
 		<plugins>
 			<plugin>
-				<!-- updated on 29/07/2015 -->
+				<!-- updated on 17/04/2021 -->
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-source-plugin</artifactId>
-				<version>2.4</version>
+				<version>3.2.1</version>
 				<executions>
 					<execution>
 						<id>bind-sources</id>
@@ -186,14 +190,14 @@
 				</executions>
 			</plugin>
 			<plugin>
-				<!-- updated on 29/10/2015 -->
+				<!-- updated on 17/04/2021 -->
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.3</version>
+				<version>3.8.1</version>
 				<configuration>
 					<encoding>UTF-8</encoding>
-					<source>1.6</source>
-					<target>1.6</target>
+					<source>${maven.compiler.source}</source>
+					<target>${maven.compiler.target}</target>
 					<excludes>
 						<exclude>**/.svn/*</exclude>
 						<exclude>**/.svn</exclude>
@@ -201,19 +205,19 @@
 				</configuration>
 			</plugin>
 			<plugin>
-				<!-- updated on 29/10/2015 -->
+				<!-- updated on 17/04/2021 -->
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-resources-plugin</artifactId>
-				<version>2.7</version>
+				<version>3.2.0</version>
 				<configuration>
 					<encoding>UTF-8</encoding>
 				</configuration>
 			</plugin>
 			<plugin>
-				<!-- updated on 29/10/2015 -->
+				<!-- updated on 17/04/2021 -->
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jar-plugin</artifactId>
-				<version>2.6</version>
+				<version>3.2.0</version>
 				<configuration>
 					<excludes>
 						<exclude>**/.svn/*</exclude>
@@ -222,10 +226,10 @@
 				</configuration>
 			</plugin>
 			<plugin>
-				<!-- updated on 29/07/2015 -->
+				<!-- updated on 17/04/2021 -->
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>
-				<version>2.10.3</version>
+				<version>3.2.0</version>
 				<!-- ONLY NEEDED With jdk 1.7+ -->
 				<configuration>
 					<failOnError>false</failOnError>
@@ -241,9 +245,10 @@
 				</executions>
 			</plugin>
 			<plugin>
+				<!-- updated on 17/04/2021 -->
 				<groupId>org.apache.felix</groupId>
 				<artifactId>maven-bundle-plugin</artifactId>
-                <version>3.3.0</version> <!-- 3.0.0 need java 7+ -->
+                <version>5.1.2</version> <!-- 3.0.0 need java 7+ -->
 				<extensions>true</extensions>
 				<configuration>
 					<instructions>
