--- a/pom.xml
+++ b/pom.xml
@@ -7,11 +7,11 @@
 	<name>Minidev super pom</name>
 	<description>minidev common properties.</description>
 	<packaging>pom</packaging>
-	<url>http://www.minidev.net/</url>
+	<url>https://urielch.github.io/</url>
 
 	<organization>
 		<name>Chemouni Uriel</name>
-		<url>http://www.minidev.net/</url>
+		<url>https://urielch.github.io/</url>
 	</organization>
 
 	<developers>
@@ -19,7 +19,7 @@
 			<id>uriel</id>
 			<name>Uriel Chemouni</name>
 			<email>uchemouni@gmail.com</email>
-			<timezone>GMT-7</timezone>
+			<timezone>GMT+3</timezone>
 			<roles>
 			</roles>
 		</developer>
@@ -36,16 +36,16 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<maven.compiler.source>1.5</maven.compiler.source>
-		<maven.compiler.target>1.5</maven.compiler.target>
+		<maven.compiler.source>1.8</maven.compiler.source>
+		<maven.compiler.target>1.8</maven.compiler.target>
 	</properties>
 
 	<build>
 		<plugins>
-			<plugin> <!-- updated on 29/07/2015 -->
+			<plugin> <!-- updated on 04/04/2021 -->
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-source-plugin</artifactId>
-				<version>2.4</version>
+				<version>3.2.1</version>
 				<executions>
 					<execution>
 						<id>bind-sources</id>
@@ -56,46 +56,38 @@
 				</executions>
 			</plugin>
 
-			<plugin> <!-- updated on 29/10/2015 -->
+			<plugin> <!-- updated on 04/04/2021 -->
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.3</version>
+				<version>3.8.1</version>
 				<configuration>
 					<encoding>UTF-8</encoding>
-					<source>1.6</source>
-					<target>1.6</target>
-					<excludes>
-						<exclude>**/.svn/*</exclude>
-						<exclude>**/.svn</exclude>
-					</excludes>
+					<source>${maven.compiler.source}</source>
+					<target>${maven.compiler.target}</target>
 				</configuration>
 			</plugin>
 
-			<plugin> <!-- updated on 29/10/2015 -->
+			<plugin> <!-- updated on 04/04/2021 -->
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-resources-plugin</artifactId>
-				<version>2.7</version>
+				<version>3.2.0</version>
 				<configuration>
 					<encoding>UTF-8</encoding>
 				</configuration>
 			</plugin>
 
-			<plugin> <!-- updated on 29/10/2015 -->
+			<plugin> <!-- updated on 04/04/2021 -->
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jar-plugin</artifactId>
-				<version>2.6</version>
+				<version>3.2.0</version>
 				<configuration>
-					<excludes>
-						<exclude>**/.svn/*</exclude>
-						<exclude>**/.svn</exclude>
-					</excludes>
 				</configuration>
 			</plugin>
 
-			<plugin> <!-- updated on 29/07/2015 -->
+			<plugin> <!-- updated on 04/04/2021 -->
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>
-				<version>2.10.3</version>
+				<version>3.2.0</version>
 				<!-- ONLY NEEDED With jdk 1.7+ -->
 				<configuration>
 					<failOnError>false</failOnError>
@@ -114,7 +106,6 @@
 	</build>
 
 	<scm>
-		<!-- ON GIT HUB -->
 		<connection>scm:git:https://github.com/netplex/json-smart-v2.git</connection>
 		<developerConnection>scm:git:https://github.com/netplex/json-smart-v2.git</developerConnection>
 		<url>https://github.com/netplex/json-smart-v2</url>
@@ -122,10 +113,10 @@
 
 	<reporting>
 		<plugins>
-			<plugin> <!-- updated on 29/10/2015 -->
+			<plugin> <!-- updated on 04/04/2021 -->
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-checkstyle-plugin</artifactId>
-				<version>2.17</version>
+				<version>3.1.2</version>
 				<configuration>
 					<configLocation>google_checks.xml</configLocation>
 				</configuration>
@@ -134,9 +125,9 @@
 	</reporting>
 
 	<modules>
-		<module>accessors-smart</module>
-		<module>json-smart-action</module>
-		<module>json-smart</module>
+		<!-- <module>accessors-smart</module> -->
+		<!-- <module>json-smart-action</module> -->
+		<!-- <module>json-smart</module> -->
 	</modules>
 
 	<distributionManagement>
@@ -148,10 +139,8 @@
 			<id>ossrh</id>
 			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
 		</repository>
-		<!-- <snapshotRepository> <id>ossrh</id> <url>https://oss.sonatype.org/content/repositories/snapshots</url> 
-			</snapshotRepository> -->
 	</distributionManagement>
-
+	<!-- release with: mvn clean deploy -P release-sign-artifacts-->
 	<profiles>
 		<profile>
 			<id>release-sign-artifacts</id>
@@ -163,8 +152,11 @@
 				</property>
 			</activation>
 			<properties>
-				<gpg.keyname>8E322ED0</gpg.keyname>
+				<!--<gpg.keyname>8E322ED0</gpg.keyname> -->
 				<!-- 2C8DF6EC Loosed Key -->
+				<!-- <gpg.keyname>2C8DF6EC</gpg.keyname> -->
+				<!-- 2021 rsa4096 key-->
+				<gpg.keyname>53BE126D</gpg.keyname>
 				<!-- <gpg.keyname>Uriel Chemouni (dev) <uchemouni@gmail.com></gpg.keyname> -->
 				<!-- GPG Key ID to use for signing -->
 			</properties>
@@ -213,10 +205,10 @@
 						tag, deploy) to try: mvn release:prepare -DdryRun=true && mvn release:clean 
 						to perform: mvn release:prepare release:perform Read http://nexus.sonatype.org/oss-repository-hosting.html#3 
 						for instructions on releasing to this project's Sonatype repository -->
-					<plugin>
+					<plugin> <!-- updated on 04/04/2021 -->
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-release-plugin</artifactId>
-						<version>2.5.2</version>
+						<version>3.0.0-M1</version>
 						<configuration>
 							<mavenExecutorId>forked-path</mavenExecutorId>
 							<arguments>-Psonatype-oss-release</arguments>
@@ -266,6 +258,7 @@
 				<groupId>junit</groupId>
 				<artifactId>junit</artifactId>
 				<version>4.12</version>
+				<scope>test</scope>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
