--- a/json-smart/pom.xml
+++ b/json-smart/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>net.minidev</groupId>
 		<artifactId>minidev-parent</artifactId>
-		<version>2.3-SNAPSHOT</version>
+		<version>2.3.1</version>
 	</parent>
 	<!-- this POM is released under an Apache 2.0 license -->
 	<modelVersion>4.0.0</modelVersion>
@@ -56,7 +56,7 @@
 		<dependency>
 			<groupId>net.minidev</groupId>
 			<artifactId>accessors-smart</artifactId>
-            <version>1.2-SNAPSHOT</version>
+			<version>2.3.1</version>
 		</dependency>
 	</dependencies>
 	<scm>
