--- a/accessors-smart/pom.xml
+++ b/accessors-smart/pom.xml
@@ -81,8 +81,10 @@ limitations under the License.
                 </property>
             </activation>
             <properties>
+                <!-- original gpg key from 2011-05-28 -->
+                <gpg.keyname>2C8DF6EC</gpg.keyname>
 				<!-- 2021 rsa4096 key-->
-				<gpg.keyname>53BE126D</gpg.keyname>
+				<!-- <gpg.keyname>53BE126D</gpg.keyname> -->
                 <!-- <gpg.keyname>Uriel Chemouni (dev) <uchemouni@gmail.com></gpg.keyname> -->
             </properties>
             <build>
