--- a/.github/workflows/json-smart-unit-tests.yml
+++ b/.github/workflows/json-smart-unit-tests.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        java-version: [8, 11, 17, 21]
+        java-version: [8, 11, 16, 17, 21]
     steps:
       - uses: actions/checkout@v4
       
