--- a/accessors-smart/pom.xml
+++ b/accessors-smart/pom.xml
@@ -82,9 +82,9 @@ limitations under the License.
             </activation>
             <properties>
                 <!-- original gpg key from 2011-05-28 -->
-                <gpg.keyname>2C8DF6EC</gpg.keyname>
+                <!-- <gpg.keyname>2C8DF6EC</gpg.keyname> -->
 				<!-- 2021 rsa4096 key-->
-				<!-- <gpg.keyname>53BE126D</gpg.keyname> -->
+				<gpg.keyname>53BE126D</gpg.keyname>
                 <!-- <gpg.keyname>Uriel Chemouni (dev) <uchemouni@gmail.com></gpg.keyname> -->
             </properties>
             <build>
@@ -127,7 +127,7 @@ limitations under the License.
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-release-plugin</artifactId>
-                        <version>3.0.0-M6</version>
+                        <version>3.0.1</version>
                         <configuration>
                             <mavenExecutorId>forked-path</mavenExecutorId>
                             <arguments>-Psonatype-oss-release</arguments>
